[package]
name = "htmltopdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20" }
serde = { version =  "1.0.186", features = ["derive"] }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
[build]
rustflags = ["-C", "target-cpu=native"]