[package]
name = "htmltopdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = { version =  "1.0.203", features = ["derive"] }
headless_chrome = {version = "1.0.10" , default-features = false}
env_logger = "0.10.2"
log = "0.4.21"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
[build]
rustflags = ["-C", "target-cpu=native"]

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"